# first_step_webapp

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
dockerfile/: Dockerfile  docker-compose.yaml  entrypoint.sh
first_step_app/: asgi.py  settings.py  urls.py  wsgi.py
gestion/: consumers.py  routing.py  urls.py  views.py
gestion/templates/: gm_room.html  main.html  player_room.html
static/styles/: styles.css
