[project]
name = "first-step"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "channels>=4.3.2",
    "channels-redis>=4.3.0",
    "daphne>=4.2.1",
    "django>=5.2.9",
    "django-environ>=0.12.0",
    "psycopg2-binary>=2.9.11",
    "whitenoise>=6.11.0",
]
